[project]
name = "class-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ammarahmed2037", email = "ammarahmed2037@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.17",
]

[project.scripts]
class-2 = "class_2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
